add portfolio images

--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
                     My last projects <br>
                     View my projects
                 </div>
+                <div class="portfolio-items">
+                    <div class="portfolio-item">
+                        <img src="./images/" alt="">
+                    </div>
+                </div>
                
             </section>
         </div>
